--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@antfu/eslint-config": "^3.8.0",
     "@iconify/json": "^2.2.261",
     "@tauri-apps/cli": "^2.0.3",
+    "@types/node": "^22.7.6",
     "@unocss/eslint-plugin": "^0.63.4",
     "@vitejs/plugin-vue": "^5.1.4",
     "eslint": "^9.12.0",
