--- a/package.json
+++ b/package.json
@@ -9,28 +9,34 @@
     "preview": "vite preview",
     "tauri:dev": "tauri dev",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "tz": "npx taze major -w && pnpm i"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2.0.2",
-    "@tauri-apps/plugin-shell": "^2.0.0",
-    "@unocss/reset": "^0.63.4",
-    "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "@tauri-apps/api": "^2.2.0",
+    "@tauri-apps/plugin-shell": "^2.2.0",
+    "@unocss/reset": "^65.4.3",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.8.0",
-    "@iconify/json": "^2.2.261",
-    "@tauri-apps/cli": "^2.0.3",
-    "@types/node": "^22.7.6",
-    "@unocss/eslint-plugin": "^0.63.4",
-    "@vitejs/plugin-vue": "^5.1.4",
-    "eslint": "^9.12.0",
-    "eslint-plugin-format": "^0.1.2",
-    "typescript": "^5.6.3",
-    "unocss": "^0.63.4",
-    "unplugin-vue-router": "^0.10.8",
-    "vite": "^5.4.9",
-    "vue-tsc": "^2.1.6"
+    "@antfu/eslint-config": "^4.1.1",
+    "@iconify/json": "^2.2.303",
+    "@tauri-apps/cli": "^2.2.7",
+    "@types/node": "^22.13.1",
+    "@unocss/eslint-plugin": "^65.4.3",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "eslint": "^9.19.0",
+    "eslint-plugin-format": "^1.0.1",
+    "typescript": "^5.7.3",
+    "unocss": "^65.4.3",
+    "unplugin-vue-router": "^0.11.2",
+    "vite": "^6.1.0",
+    "vue-tsc": "^2.2.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
